package ch.hslu.ad.sw03.binary_search_tree;

public enum NodeDirection {
    LEFT,
    RIGHT
}
